final polish and better memory handling